--- a/Index.html
+++ b/Index.html
@@ -21,11 +21,10 @@
 
         <img src="img/inicio.svg" alt="" class="house" ><!--icono del menu -->
         <nav class="menu-navegacion">
-            <a href="#inicio">Inicio</a>
-            <a href="#piezas">Piezas</a>
-            <a href="#sugerencias">Sugerencias</a> 
-            <a href="#equipo">Equipo</a> 
-            <a href="#contacto">Contacto</a>
+            <a href="Index.html">Inicio</a>
+            <a href="Arriendos.html">Arriendos</a> 
+            <a href="Soporte.html">Soporte</a>
+            <a href="#perfil" class="boton-sesion">Iniciar Sesión</a>
         </nav>
         <div class="contenedor head">
             <h1 class="titulo">Arrriendos universitarios Temuco </h1>
@@ -102,6 +101,25 @@
         </section>
        </section>
 
+
+        <div class="contenedor-popup">
+            <div class="ventana-emergente-login">
+                <div class="flex-divrow-popup">
+                    <p>Iniciar Sesion</p>
+                    <button class="cerrar-login">
+                        <img src="img/x.png" alt="">
+                    </button>
+                </div>
+                <form action="">
+                    <input type="text" placeholder="Correo Electronico" required>
+                    <input type="password" placeholder="Contraseña" required>
+                </form>
+                <div class="flex-divrow-popup">
+                    <a href="">Crear Cuenta</a>
+                </div>
+            </div>
+        </div>
+
    
     </main>
 
@@ -132,7 +150,8 @@
         <div id="line"></div>
     </footer>
    
-  <script src="js/hoja.js"></script>  
+  <script src="js/hoja.js"></script>
+  <script src="js/popup.js"></script>  
 </body>
 
 <!-- do svidaniya :) -->
